pe_customer_management/envoy_config.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9999 }

tracing:
  http:
    name: envoy.zipkin
    typed_config:
      "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
      collector_cluster: jaeger
      collector_endpoint: "/api/v2/spans"
      collector_endpoint_version: HTTP_JSON

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8888 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: 
                  prefix: "/"
                  headers:
                    - name: "x-opco"
                      exact_match: "nl"
                route: { host_rewrite: myapp, cluster: nl_cluster, timeout: 60s }
              - match:
                  prefix: "/"
                  headers:
                    - name: "x-opco"
                      exact_match: "ie"
                route: { host_rewrite: myapp, cluster: ie_cluster, timeout: 60s }
              - match:
                  prefix: "/nl/"
                route: { prefix_rewrite: "/", host_rewrite: myapp, cluster: nl_cluster, timeout: 60s }
              - match:
                  prefix: "/ie/"
                route: { prefix_rewrite: "/", host_rewrite: myapp, cluster: ie_cluster, timeout: 60s }
          http_filters:
          - name: envoy.router
  clusters:
  - name: nl_cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: LEAST_REQUEST
    hosts: [{ socket_address: { address: nl_customer_management, port_value: 5000 }}]
  - name: ie_cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: LEAST_REQUEST
    hosts: [{ socket_address: { address: ie_customer_management, port_value: 5000 }}]
  - name: jaeger
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: jaeger
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jaeger
                port_value: 9411
